Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 10.2.33, 10.3.24, 10.4.14
-
Component/s: Storage Engine - InnoDB
-
Labels:
Description
Write-heavy benchmarks show a regression in latency and throughput for latest releases in the 10.2, 10.3 and 10.4 series.
Example:
----------------------------------------------------------------------------
|
Test 't_oltp-innodb-multi' - sysbench OLTP read/write
|
32 InnoDB tables with 10 mio rows total
|
numbers are queries per second
|
|
#thread count 1 8 16 32 64 128 256
|
mariadb-10.2.32 5262.8 28886 53535 95712 158049 189909 192668
|
mariadb-10.2.33 4866.7 22651 42352 78750 133580 173461 191125
|
|
mariadb-10.3.23 5126.4 28716 52785 95466 156936 185473 187136
|
mariadb-10.3.24 4772.0 22959 42713 80442 133492 171252 186200
|
|
mariadb-10.4.13 5015.7 28263 52033 93771 154690 178179 178076
|
mariadb-10.4.14 4980.9 23496 43145 79795 128977 166470 179285
|
I examined this more closely for 10.2, bisecting the commits between 10.2.32 and 10.2.33. The first faulty commit is
commit fe39d02f51b96536dccca7ff89faf05e13548877
|
Author: Thirunarayanan Balathandayuthapani <thiru@mariadb.com>
|
Date: Thu Jul 23 16:23:20 2020 +0530
|
|
MDEV-20638 Remove the deadcode from srv_master_thread() and srv_active_wake_master_thread_low()
|
Attachments
Issue Links
- is caused by
-
MDEV-20638 Remove the deadcode from srv_master_thread() and srv_active_wake_master_thread_low()
-
- Closed
-