MDEV-23475 InnoDB performance regression for write-heavy workloads

In commit fe39d02f51b96536dccca7ff89faf05e13548877 (MDEV-20638)
we removed some wake-up signaling of the master thread that should
have been there, to ensure a steady log checkpointing workload.

trx_flush_log_if_needed_low(): Invoke srv_inc_activity_count().
This covers both COMMIT and ROLLBACK, which should also be executed
as part of DDL operations.

innobase_active_small(): Reinstate the function. This appears to
be necessary in order to avoid a performance regression at low
concurrency when sync_binlog=1.